test/must_fail/extra_attribute.ref
error: resistor R1 device attribute 'banana' is not recognized attribute, attributes with similar names are: <none>
hint: Allowed resistor attributes are: anode, cathode, cp, ls, model, name, r
error: resistor R1 contains invalid attribute
  [extra_attribute.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(U1)');
           ^

Stack trace (7 frames):
  [Exception.js:0:0, core.js:0:0] in Exception()
    Internal.buffered_stack_trace(aMessage || "Error");
             ^
  [device_attr_check.js:0:0, core.js:0:0] in device_attr_check()
    throw new Exception((aDevice.type || "device") + " " + (aDevice.attr.name || "<unnamed>") + " contains invalid attribute");
          ^
  [device/resistor.js:0:0, core.js:0:0] in Resistor.validate()
    device_attr_check(this, this.attr, {
    ^
  [netlist/netlist_render.js:0:0, core.js:0:0] in netlist_render()
    aNetlistDevices[i].validate();
                       ^
  [netlist/netlist_done.js:0:0, core.js:0:0] in netlist_done()
    r.netlist = netlist_render(netlist_devices, netlist_line_markers, true, false);
                ^
  [analysis/tran.js:0:0, core.js:0:0] in Tran.run()
    this.ret = netlist_done();
               ^
  [extra_attribute.ngjs:0:0] in <anonymous>()
    tran().run().chart('I(U1)');
           ^

exit(12)
